Wallets: fix icon gaps

--- a/src/views/IndexPage/Wallets/Wallets.module.scss
+++ b/src/views/IndexPage/Wallets/Wallets.module.scss
@@ -3,7 +3,7 @@
 }
 
 .description {
-  @apply text-white/40 mb-10 text-2xl text-center px-5;
+  @apply text-white/40 mb-10 lg:mb-20 text-2xl text-center px-5;
 }
 
 .image {
